Overflow fixes

--- a/_sass/jekyll-theme-minimalistic.scss
+++ b/_sass/jekyll-theme-minimalistic.scss
@@ -229,7 +229,7 @@ hr {
     margin:0;
   }
 
-  header, section {
+  header, section, .wrapper {
     float:none;
     position:static;
     width:auto;
